compiler/tools/fpp-check/test/state_machine/typed_elements/state_choice_bad_if_action_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/state_choice_bad_if_action_type.fpp:7.26
    choice J { if g do { a } enter T else enter T }
                         ^
error: type mismatch at junction
type of junction is None
type of action is U32
